// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useWorkspacePath pushWsPath works 1`] = `
Object {
  "filePath": "",
  "pushWsPath": [Function],
  "removePrimaryAndSecondaryWsPath": [Function],
  "removeSecondaryWsPath": [Function],
  "removeWsPath": [Function],
  "replacePrimaryAndSecondaryWsPath": [Function],
  "replaceSecondaryWsPath": [Function],
  "replaceWsPath": [Function],
  "secondaryWsPath": undefined,
  "wsName": "kujo",
  "wsPath": undefined,
}
`;

exports[`useWorkspacePath pushWsPath works 3`] = `
Object {
  "filePath": "two.md",
  "pushWsPath": [Function],
  "removePrimaryAndSecondaryWsPath": [Function],
  "removeSecondaryWsPath": [Function],
  "removeWsPath": [Function],
  "replacePrimaryAndSecondaryWsPath": [Function],
  "replaceSecondaryWsPath": [Function],
  "replaceWsPath": [Function],
  "secondaryWsPath": undefined,
  "wsName": "kujo",
  "wsPath": "kujo:two.md",
}
`;
